kubernetes/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rmq-test-nest-producer
  labels:
    name: rmq-test-nest-producer
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - producer.shakar.tech
      secretName: lets-encrypt-producer.shakar.tech
  rules:
    - host: producer.shakar.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: rmq-test-nest-producer
                port:
                  name: http-app
